# markus-exam-matcher

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  Requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
markus_exam_matcher/: cnn.py  image_transformations.py  read_chars.py
src/markus_exam_matcher/: __init__.py  __main__.py
src/markus_exam_matcher/_cnn/: cnn.py
src/markus_exam_matcher/core/: char_types.py  display_elements.py
src/markus_exam_matcher/image_processing/: box_detection.py  image_transformation_pipelines.py  image_transformations.py  read_chars.py
src/markus_exam_matcher/qr_scan/: scan_qr.py  scan_qr_code.py
tests/: test_simple.py
